Update Spanish, Mexico translations

--- a/util/src/main/i18n/translations/command_es_MX.properties
+++ b/util/src/main/i18n/translations/command_es_MX.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Debes ser un jugador para usar este comando.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Por favor especifica un jugador
 
 
 # {0} = player name
