Update Thai translations

--- a/util/src/main/i18n/translations/command_th_TH.properties
+++ b/util/src/main/i18n/translations/command_th_TH.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = คุณต้องเป็นหนึ่งในผู้เล่นจึงจะใช้คำสั่งนี้ได้
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = โปรดระบุชื่อผู้เล่นให้ละเอียดกว่านี้
 
 
 # {0} = player name
