--- a/util/src/main/i18n/translations/command_ar_SA.properties
+++ b/util/src/main/i18n/translations/command_ar_SA.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = يجب أن تكون لاعبا لاستخدام هذا الأمر.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = الرجاء تحديد لاعب
 
 
 # {0} = player name
