Update Catalan translations

--- a/util/src/main/i18n/translations/command_ca_ES.properties
+++ b/util/src/main/i18n/translations/command_ca_ES.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Has de ser un jugador per utilitzar aquest comandament.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Si us plau, especifiqueu un jugador
 
 
 # {0} = player name
