--- a/util/src/main/i18n/translations/moderation_ca_ES.properties
+++ b/util/src/main/i18n/translations/moderation_ca_ES.properties
@@ -2,6 +2,7 @@
 
 # {0} = Type of punishment
 
+moderation.type.kick = Expulsat
 
 
 
@@ -10,6 +11,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = No hi ha cap administrador connectat \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -23,6 +25,7 @@
 
 # {0} = duration (e.g. "2 weeks")
 
+moderation.mute.message = Estas silenciat, no pots parlar.
 
 
 
@@ -41,6 +44,7 @@
 
 # {0} = player name
 
+moderation.alts.header = Comptes alternatives
 
 # {0} = player name
 
