Update Danish translations

--- a/util/src/main/i18n/translations/command_da_DK.properties
+++ b/util/src/main/i18n/translations/command_da_DK.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Du skal være en spiller for at bruge denne kommando.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Venligst angiv en spiller
 
 
 # {0} = player name
