Update Romanian translations

--- a/util/src/main/i18n/translations/moderation_ro_RO.properties
+++ b/util/src/main/i18n/translations/moderation_ro_RO.properties
@@ -2,6 +2,7 @@
 
 # {0} = Type of punishment
 
+moderation.type.kick = L-a dat afară pe
 
 
 
@@ -10,6 +11,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = Niciun membru din personal nu este online \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -41,6 +43,7 @@
 
 # {0} = player name
 
+moderation.alts.header = Conturi alternative
 
 # {0} = player name
 
