--- a/util/src/main/i18n/translations/command_af_ZA.properties
+++ b/util/src/main/i18n/translations/command_af_ZA.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Jy moet 'n wees speler om hierdie opdrag te gebruik.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Spesifiseer asseblief 'n speler
 
 
 # {0} = player name
