Update Korean translations

--- a/util/src/main/i18n/translations/command_ko_KR.properties
+++ b/util/src/main/i18n/translations/command_ko_KR.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = 플레이어만 이 명령어를 실행할수 있습니다.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = 플레이어를 지정해주세요
 
 
 # {0} = player name
