--- a/util/src/main/i18n/translations/death_ko_KR.properties
+++ b/util/src/main/i18n/translations/death_ko_KR.properties
@@ -504,6 +504,7 @@
 # {1} = killer player name
 # {3} = mob name (e.g. "Creeper")
 
+death.respawn.unconfirmed = 왼쪽 클릭으로 리스폰
 
 # {0} = number of seconds (e.g. "1.23" or "1")
 
