--- a/util/src/main/i18n/translations/moderation_ko_KR.properties
+++ b/util/src/main/i18n/translations/moderation_ko_KR.properties
@@ -2,6 +2,7 @@
 
 # {0} = Type of punishment
 
+moderation.type.kick = 추방
 
 
 
@@ -10,6 +11,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = 온라인 스탭이 없습니다 \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -23,6 +25,7 @@
 
 # {0} = duration (e.g. "2 weeks")
 
+moderation.mute.message = 당신은 채팅이 금지되어 채팅 메시지를 보낼 수 없습니다.
 
 
 
@@ -41,6 +44,7 @@
 
 # {0} = player name
 
+moderation.alts.header = 부계정
 
 # {0} = player name
 
