--- a/util/src/main/i18n/translations/command_nl_NL.properties
+++ b/util/src/main/i18n/translations/command_nl_NL.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Je moet een speler zijn om deze opdracht te kunnen uitvoeren.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Noem een speler
 
 
 # {0} = player name
