Update Norwegian translations

--- a/util/src/main/i18n/translations/command_no_NO.properties
+++ b/util/src/main/i18n/translations/command_no_NO.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Du må være en spiller for å bruke denne kommandoen.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Vennligst spesifiser en spiller
 
 
 # {0} = player name
