--- a/util/src/main/i18n/translations/death_no_NO.properties
+++ b/util/src/main/i18n/translations/death_no_NO.properties
@@ -504,6 +504,7 @@
 # {1} = killer player name
 # {3} = mob name (e.g. "Creeper")
 
+death.respawn.unconfirmed = Venstreklikk for å gjennoppstå
 
 # {0} = number of seconds (e.g. "1.23" or "1")
 
