Update German translations

--- a/util/src/main/i18n/translations/moderation_de_DE.properties
+++ b/util/src/main/i18n/translations/moderation_de_DE.properties
@@ -10,6 +10,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = Es sind zurzeit keine Moderatoren/Administratoren online \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -41,6 +42,7 @@
 
 # {0} = player name
 
+moderation.alts.header = Zweit-Accounts
 
 # {0} = player name
 
