Update German translations

--- a/util/src/main/i18n/translations/command_de_DE.properties
+++ b/util/src/main/i18n/translations/command_de_DE.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Du musst ein Spieler sein, um diesen Befehl zu nutzen.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Bitte gib einen Spieler an
 
 
 # {0} = player name
