--- a/util/src/main/i18n/translations/command_it_IT.properties
+++ b/util/src/main/i18n/translations/command_it_IT.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Devi essere un giocatore per usare questo comando.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Specificare un giocatore
 
 
 # {0} = player name
