Fix broken header
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/includes-conditionals.mdx
+++ b/docs/modules/includes-conditionals.mdx
@@ -111,7 +111,7 @@ The master map repository contains the following pre-made XML files for you to u
   </table>
 </div>
 
-### [Conditionals](id:conditionals)
+### Conditionals
 
 XML files can contain simple `<if>` and `<unless>` [conditional][https://en.wikipedia.org/wiki/conditional_%28computer_programming%29] statements, these conditionals can be used to reduce duplicated map files and simplify managing multiple variations of a map.
 For example, instead of having multiple map variants in different folders they can condensed into one neat location.
