Improve table styling
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/main.mdx
+++ b/docs/modules/main.mdx
@@ -290,7 +290,7 @@ A players name should **not** be used to credit them, instead their UUID should 
 
 ##### Author & Contributor Attributes
 
-<div>
+<div className="table-container">
   <table className="table">
     <thead>
       <tr>
