Migrate Information and Environment sections of Modules
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/tutorial.mdx
+++ b/docs/modules/tutorial.mdx
@@ -20,8 +20,8 @@ Teleports are optional, if they are not defined just the message will be display
 
 Stages are displayed in the order that they are defined as in the XML.
 
-<div class="table-container">
-  <table class="table">
+<div className="table-container">
+  <table className="table">
     <thead>
       <tr>
         <th>Tutorial Element</th>
@@ -38,7 +38,8 @@ Stages are displayed in the order that they are defined as in the XML.
         <td></td>
       </tr>
       <tr>
-        <th colspan="2">Sub-elements</th>
+        <th>Sub-elements</th>
+        <th />
         <th>Value/Children</th>
       </tr>
       <tr>
@@ -47,7 +48,7 @@ Stages are displayed in the order that they are defined as in the XML.
         </td>
         <td>A single tutorial stage.</td>
         <td>
-          <span class="badge badge--default">Stage Sub-elements</span>
+          <span className="badge badge--default">Stage Sub-elements</span>
         </td>
       </tr>
     </tbody>
@@ -56,8 +57,8 @@ Stages are displayed in the order that they are defined as in the XML.
 
 ##### Tutorial Stage Attributes
 
-<div class="table-container">
-  <table class="table">
+<div className="table-container">
+  <table className="table">
     <thead>
       <tr>
         <th>Attribute</th>
@@ -71,11 +72,11 @@ Stages are displayed in the order that they are defined as in the XML.
           <label>title</label>
         </td>
         <td>
-          <span class="badge badge--danger">Required</span>
+          <span className="badge badge--danger">Required</span>
           Short title for this stage.
         </td>
         <td>
-          <span class="badge badge--primary">String</span>
+          <span className="badge badge--primary">String</span>
         </td>
       </tr>
     </tbody>
@@ -84,8 +85,8 @@ Stages are displayed in the order that they are defined as in the XML.
 
 ##### Tutorial Stage Sub-elements
 
-<div class="table-container">
-  <table class="table">
+<div className="table-container">
+  <table className="table">
     <thead>
       <tr>
         <th>Element</th>
@@ -112,7 +113,7 @@ Stages are displayed in the order that they are defined as in the XML.
           <label>{`<message>`}</label>
         </td>
         <td>
-          <span class="badge badge--primary">String</span>
+          <span className="badge badge--primary">String</span>
         </td>
       </tr>
       <tr>
