Update styling method
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/border.mdx
+++ b/docs/modules/border.mdx
@@ -8,7 +8,7 @@ The world border module uses the default minecraft world border and allows custo
 Attributes for multiple world borders can be applied for all borders by specifying them in the root `<world-borders>` element.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -47,7 +47,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
 ##### World Borders Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th style={{ minWidth: "150px" }}>Attribute</th>
@@ -184,7 +184,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
 ##### World Border Sub-elements
 
 <div className="table-container">
-  <table className="table table-striped table-condensed">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
