--- a/docs/modules/broadcasts.mdx
+++ b/docs/modules/broadcasts.mdx
@@ -12,7 +12,7 @@ used to to show important information that is **specific** and **unique** to the
 map. It should not be used to for generic OCN related messages.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Broadcasts Element</th>
@@ -58,7 +58,7 @@ map. It should not be used to for generic OCN related messages.
 ##### Message Tag Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Attribute</th>
@@ -132,7 +132,7 @@ map. It should not be used to for generic OCN related messages.
 ##### Message Tag Sub-elements
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
