--- a/docs/modules/main.mdx
+++ b/docs/modules/main.mdx
@@ -10,7 +10,7 @@ The `proto=""` attribute specifies what PGM version the XML file was created for
 The maps version should follow the versioning schema `major.minor.patch`.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Map Element</th>
@@ -37,7 +37,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
 ##### Map Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Attribute</th>
@@ -87,7 +87,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
 ##### Map Sub-elements
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -250,7 +250,7 @@ A players name should **not** be used to credit them, instead their UUID should 
 ##### Author or Contributor Sub-elements
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -291,7 +291,7 @@ A players name should **not** be used to credit them, instead their UUID should 
 ##### Author & Contributor Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Attribute</th>
@@ -346,7 +346,7 @@ If no `<gamemode>` tags are specified the map will set the gamemode(s) to whatev
 This means that a map that uses destroyables and flags would be listed as a "DTM & CTF" unless specified otherwise.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -371,7 +371,7 @@ This means that a map that uses destroyables and flags would be listed as a "DTM
 ##### Gamemode ID's
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>ID</th>
