--- a/docs/modules/mobs.mdx
+++ b/docs/modules/mobs.mdx
@@ -9,7 +9,7 @@ This module makes use of the `<spawn>`, `<mob>` and `<entity>` [filters](/module
 Mob spawns can also be filtered against any other filter type including regions.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -77,7 +77,7 @@ Mob spawns can also be filtered against any other filter type including regions.
 ##### Mob Spawning Filter Matchers
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
