--- a/docs/modules/players.mdx
+++ b/docs/modules/players.mdx
@@ -12,7 +12,7 @@ Win conditions are set by using the score and time limit modules.
 with the teams module!
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -33,7 +33,7 @@ with the teams module!
 ##### Players Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th style={{ minWidth: "130px" }}>Attribute</th>
