--- a/docs/modules/rules.mdx
+++ b/docs/modules/rules.mdx
@@ -6,7 +6,7 @@ title: Rules
 You can use the rules module to add custom rules to your map that are not already included within your own established server-wide rules. Regions and filters should be used to enforce access and block rules.
 
 <div class="table-container">
-  <table class="table">
+  <table>
     <thead>
       <tr>
         <th>Rule Element</th>
