--- a/docs/modules/teams.mdx
+++ b/docs/modules/teams.mdx
@@ -14,7 +14,7 @@ A team's `plural` attribute specifies if the team name is plural, e.g. "Attacker
 It is common for maps to only have 2 teams, although more are possible it usually just causes confusion.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Teams Element</th>
@@ -49,7 +49,7 @@ It is common for maps to only have 2 teams, although more are possible it usuall
 ##### Team Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th style={{ minWidth: "130px" }}>Attribute</th>
