--- a/docs/modules/tutorial.mdx
+++ b/docs/modules/tutorial.mdx
@@ -21,7 +21,7 @@ Teleports are optional, if they are not defined just the message will be display
 Stages are displayed in the order that they are defined as in the XML.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Tutorial Element</th>
@@ -58,7 +58,7 @@ Stages are displayed in the order that they are defined as in the XML.
 ##### Tutorial Stage Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Attribute</th>
@@ -86,7 +86,7 @@ Stages are displayed in the order that they are defined as in the XML.
 ##### Tutorial Stage Sub-elements
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
