--- a/docs/modules/world.mdx
+++ b/docs/modules/world.mdx
@@ -16,7 +16,7 @@ The `world=""` attribute is used to specify the sub-folder that contains the map
 This is used with [conditionals](/modules/includes_conditionals#conditionals) to automatically load the holiday versions of the map, etc.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Element</th>
@@ -37,7 +37,7 @@ This is used with [conditionals](/modules/includes_conditionals#conditionals) to
 ##### Terrain Attributes
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th>Attribute</th>
