--- a/docs/reference/inventory.mdx
+++ b/docs/reference/inventory.mdx
@@ -27,7 +27,7 @@ import Materials from "../../src/components/materials";
 Depending on the material/item element used a material or multiple materials can be specified with or without data values.
 
 <div className="table-container">
-  <table className="table">
+  <table>
     <thead>
       <tr>
         <th width="20%">Type</th>
