Multiple fixes for various moderation features
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/join.properties
+++ b/util/src/main/i18n/templates/join.properties
@@ -51,6 +51,8 @@ join.err.full = Sorry, the match is full
 # {0} = team name (e.g. "Blue Team")
 join.err.full.team = Sorry, {0} is completely full
 
+join.err.vanish = You cannot join the match while vanished
+
 leave.ok.priorityKick = You were kicked from the match to make room for a premium player
 
 # {0} = team name (e.g. "Blue Team")
