--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -147,3 +147,6 @@ admin.start.matchFinished = Match has finished and may not be resumed.
 admin.start.unknownState = Match could not be started at this time.
 
 admin.end.unknownError = Match could not be ended at this time.
+
+admin.setPool.activeCycle = You may not adjust the pool while match is cycling.
+
