--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -57,6 +57,9 @@ misc.timeRemaining = Time Remaining: {0}
 # {0} = player name
 misc.createdBy = Created by {0}
 
+# {0} = player name
+misc.by = by {0}
+
 # {0} = some map or gamemode name
 misc.playing = Playing {0}
 
