--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -105,10 +105,10 @@ moderation.freeze.freeze = You have frozen {0}
 moderation.freeze.unfreeze = You have unfrozen {0}
 
 # {0} = player name
-moderation.freeze.frozen = You have been frozen by {0}
+moderation.freeze.frozen = You have been frozen
 
 # {0} = player name
-moderation.freeze.unfrozen = You have been unfrozen by {0}
+moderation.freeze.unfrozen = You have been unfrozen
 
 moderation.freeze.itemName = Player Freezer
 
