Update with more fixes
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -73,7 +73,8 @@ command.list.teams = Teams:
 
 command.list.participants = Participants
 
-command.message.noReply = Did not find a message to reply to, use /msg
+# {0} = command name
+command.message.noReply = Did not find a message to reply to, use {0}
 
 # {0} = player name
 command.message.blocked = {0} is not accepting messages at this time.
