Fix various moderation bugs
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -50,6 +50,10 @@ map.setNext = Next map set to {0} by {1}
 
 map.setNext.confirm = You may not set the next map when a restart is queued. Use -f to override.
 
+# {0} = player name (who unset the map)
+# {1} = name of map that was unset
+map.setNext.revert = {0} has removed {1} as the next map
+
 map.noNextMap = No next map
 
 # {0} = map name
@@ -89,9 +93,14 @@ pool.title = Map Pools
 
 pool.noPoolMatch = No map pools matched query
 
+pool.noDynamic = No dynamic pool could be found
+
 pool.noRotation = No rotation currently in use
 
 pool.noMapPools = No loaded map pools
+
+# {0} = map pool name (e.g. "Mega")
+pool.matching = {0} is already the current map pool
 
 pool.mapPoolsDisabled = Map pools are currently disabled
 
