--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -72,3 +72,9 @@ command.list.online = Total Online: {0}
 command.list.teams = Teams:
 
 command.list.participants = Participants
+
+# {0} = command name
+command.message.noReply = Did not find a message to reply to, use {0}
+
+# {0} = player name
+command.message.blocked = {0} is not accepting messages at this time.
