--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -37,7 +37,7 @@ moderation.screen.signoff = Issued by {0}
 # {0} = duration (e.g. "2 weeks")
 moderation.screen.expires = Expires in {0}
 
-moderation.mute.message = You have been muted and are unable to send chat messages.
+moderation.mute.message = You have been muted and are unable to send chat messages
 
 moderation.mute.list = Muted Players
 
@@ -47,7 +47,7 @@ moderation.mute.none = There are no muted players online!
 moderation.mute.hover = Click to unmute {0}
 
 # {0} = player name
-moderation.mute.target = {0} is muted and unable to receive messages.
+moderation.mute.target = {0} is muted and unable to receive messages
 
 # {0} = player name
 moderation.mute.existing = {0} is already muted!
@@ -73,17 +73,17 @@ moderation.alts.header = Alt-Accounts
 moderation.alts.noAlts = {0} has no alternate accounts online.
 
 # {0} = ip address (e.g. "1.2.3.4")
-moderation.ipBan.invalidIP = {0} is not a valid IP address.
+moderation.ipBan.invalidIP = {0} is not a valid IP address
 
 # {0} = player name
-moderation.ipBan.banned = {0} has been IP banned.
+moderation.ipBan.banned = {0} has been IP banned
 
 # {0} = player name or ip address (e.g. "Notch" or "1.2.3.4")
 # {1} = number of alternate accounts
-moderation.ipBan.bannedWithAlts = {0} has been IP banned along with {1} online alts.
+moderation.ipBan.bannedWithAlts = {0} has been IP banned along with {1} online alts
 
 # {0} = player name
-moderation.records.lookupNone = {0} has no punishment record.
+moderation.records.lookupNone = {0} has no punishment record
 
 moderation.records.header = Punishment Info
 
@@ -92,7 +92,7 @@ moderation.records.reason = Reason: {0}
 
 # {0} = player name
 # {1} = another player name
-moderation.similarIP.loginEvent = {0} has a similar IP to banned player {1}.
+moderation.similarIP.loginEvent = {0} has a similar IP to banned player {1}
 
 # {0} = player name
 # {1} = past duration (e.g. "5 minutes ago")
@@ -105,25 +105,25 @@ moderation.freeze.freeze = You have frozen {0}
 moderation.freeze.unfreeze = You have unfrozen {0}
 
 # {0} = player name
-moderation.freeze.frozen = You have been frozen by {0}
+moderation.freeze.frozen = You have been frozen
 
 # {0} = player name
-moderation.freeze.unfrozen = You have been unfrozen by {0}
+moderation.freeze.unfrozen = You have been unfrozen
 
 moderation.freeze.itemName = Player Freezer
 
 moderation.freeze.itemDescription = Right-click a player to freeze/thaw them
 
-moderation.freeze.notEnabled = Freeze is not enabled.
+moderation.freeze.notEnabled = Freeze is not enabled
 
 # {0} = player name
 moderation.freeze.exempt = {0} may not be frozen
 
 # {0} = player name
-moderation.freeze.alreadyFrozen = {0} is already frozen.
+moderation.freeze.alreadyFrozen = {0} is already frozen
 
 # {0} = player name
-moderation.freeze.alreadyThawed = {0} is not frozen.
+moderation.freeze.alreadyThawed = {0} is not frozen
 
 # {0} = number of players
 # {1} = list of player names (e.g. "Alice, Bob, and Jerry")
@@ -171,11 +171,7 @@ vanish.activate = You have vanished!
 
 vanish.deactivate = You are now visible!
 
-vanish.activate.already = You are already vanished.
-
-vanish.deactivate.already = You are not vanished.
-
-vanish.chat.deny = You can only use the admin chat while vanished.
+vanish.chat.deny = You can only use the admin chat while vanished
 
 vanish.hotbar = You are currently vanished
 
