Optimise translation keys
Signed-off-by: Rafi Baum <rafi@ukbaums.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -163,6 +163,10 @@ misc.serverFull = Server is full, consider upgrading to premium to be able to jo
 
 misc.serverRestart = Server restarting!
 
+misc.all = All
+
+misc.none = None
+
 type.int = whole number
 
 type.float = decimal number
