--- a/util/src/main/i18n/translations/ui_ca_ES.properties
+++ b/util/src/main/i18n/translations/ui_ca_ES.properties
@@ -37,9 +37,9 @@ setting.visibility = Visibilitat
 # {0} = status (e.g. "Shown" or "Hidden")
 setting.visibility.lore = Visibilitat dels observadors\:{0}
 
-setting.visibility.shown = Mostrar
+setting.observers.value.on = Mostrar
 
-setting.visibility.hidden = Amagat
+setting.observers.value.off = Amagat
 
 setting.observersOnly = Ho sentim, aquesta comanda es només per observadors.
 
