--- a/util/src/main/i18n/translations/ui_ko_KR.properties
+++ b/util/src/main/i18n/translations/ui_ko_KR.properties
@@ -37,9 +37,9 @@ setting.visibility = 표시 여부
 # {0} = status (e.g. "Shown" or "Hidden")
 setting.visibility.lore = 관전자 표시 여부\: {0}
 
-setting.visibility.shown = 보임
+setting.observers.value.on = 보임
 
-setting.visibility.hidden = 숨김
+setting.observers.value.off = 숨김
 
 setting.observersOnly = 죄송합니다, 이 명령어는 관전자만 사용할 수 있습니다.
 
