--- a/util/src/main/i18n/translations/ui_no_NO.properties
+++ b/util/src/main/i18n/translations/ui_no_NO.properties
@@ -29,9 +29,9 @@ setting.visibility = Synlighet
 
 # {0} = status (e.g. "Shown" or "Hidden")
 
-setting.visibility.shown = Synlig
+setting.observers.value.on = Synlig
 
-setting.visibility.hidden = Skjult
+setting.observers.value.off = Skjult
 
 setting.observersOnly = Beklager, denne kommandoen er bare for observatører.
 
