--- a/util/src/main/i18n/translations/ui_ro_RO.properties
+++ b/util/src/main/i18n/translations/ui_ro_RO.properties
@@ -37,9 +37,9 @@ setting.visibility = Vizibilitate
 # {0} = status (e.g. "Shown" or "Hidden")
 setting.visibility.lore = Vizibilitate spectatori\: {0}
 
-setting.visibility.shown = Vizibili
+setting.observers.value.on = Vizibili
 
-setting.visibility.hidden = Ascunși
+setting.observers.value.off = Ascunși
 
 setting.observersOnly = Ne pare rău, această comandă este doar pentru spectatori.
 
