--- a/util/src/main/i18n/translations/ui_ru_RU.properties
+++ b/util/src/main/i18n/translations/ui_ru_RU.properties
@@ -37,9 +37,9 @@ setting.visibility = Видимость
 # {0} = status (e.g. "Shown" or "Hidden")
 setting.visibility.lore = Видимость наблюдателей\: {0}
 
-setting.visibility.shown = Показываются
+setting.observers.value.on = Показываются
 
-setting.visibility.hidden = Скрыты
+setting.observers.value.off = Скрыты
 
 setting.observersOnly = Эта команда предназначена только для наблюдателей.
 
