--- a/util/src/main/i18n/translations/ui_lol_US.properties
+++ b/util/src/main/i18n/translations/ui_lol_US.properties
@@ -37,9 +37,9 @@ setting.visibility = Kat iz blind?
 # {0} = status (e.g. "Shown" or "Hidden")
 setting.visibility.lore = Borin peepl filter\: {0}
 
-setting.visibility.shown = peek a boo
+setting.observers.value.on = peek a boo
 
-setting.visibility.hidden = wehre iz obsrverz
+setting.observers.value.off = wehre iz obsrverz
 
 setting.observersOnly = SOWWY\! command iz only for observin kittehs \:(
 
