Various localisation and misc changes
Signed-off-by: Rafi Baum <rafi@ukbaums.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -89,6 +89,10 @@ misc.blocks = {0} blocks
 # "Team" (e.g. like in, "Red Team" or "Blue Team")
 misc.team = Team
 
+misc.global = Global
+
+misc.admin = Admin
+
 # do not translate, keep as-is
 misc.snowman = ☃
 
