--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -1,7 +1,5 @@
 setting.title = Settings
 
-setting.displayName = Settings
-
 setting.lore = Right-click to open the tool menu.
 
 setting.flyspeed = Fly Speed
@@ -35,38 +33,57 @@ setting.nightvision.lore = Status: {0}
 setting.observersOnly = Sorry, this command is only for observers.
 
 setting.chat = Chat
-setting.chat.lore = Channel: {0}
-setting.chat.value.team = Team
-setting.chat.value.global = Global
-setting.chat.value.admin = Admin
 
-setting.death = Death messages
-setting.death.lore = Status: {0}
+# {0} = chat channel (e.g. "Team", "Global", or "Admin")
+setting.chat.description = Channel: {0}
+
+setting.death = Death Messages
+
+# {0} = death messages shown (e.g. "Own", "All")
+setting.death.description = Status: {0}
+
 setting.death.value.own = Own
 
-setting.picker = Team picker
-setting.picker.lore = Status: {0}
+setting.picker = Team Picker
+
+# {0} = whether picker is shown (e.g. "On", "Auto", "Off")
+setting.picker.description = Status: {0}
+
 setting.picker.value.auto = Auto
 
-setting.join = Join messages
-setting.join.lore = Status: {0}
+setting.join = Join Messages
 
-setting.message = Direct messages
-setting.message.lore = Status: {0}
+# {0} = join messsages (e.g. "All", "None")
+setting.join.description = Status: {0}
 
-setting.observers = Observer visibility
-setting.observers.lore = Status: {0}
+setting.message = Direct Messages
+
+# {0} = DMs (e.g. "All", "None")
+setting.message.description = Status: {0}
+
+setting.observers = Observer Visibility
+
+# {0} = observer visibility (e.g. "Shown", "Hidden")
+setting.observers.description = Status: {0}
+
 setting.observers.value.on = Shown
+
 setting.observers.value.off = Hidden
 
 setting.sounds = Sounds
-setting.sounds.lore = Status: {0}
+
+# {0} = sounds (e.g. "All", "DMs", "None")
+setting.sounds.description = Status: {0}
+
 setting.sounds.value.messages = DMs
 
-setting.vote = Vote menu
-setting.vote.lore = Status: {0}
+setting.vote = Vote Menu
 
-setting.stats.lore = Tracking: {0}
+# {0} = vote menu (e.g. "On", "Off")
+setting.vote.description = Status: {0}
+
+# {0} = stats tracking enabled (e.g. "On", "Off")
+setting.stats.description = Tracking: {0}
 
 # {0} = name of a setting (e.g. "chat", "sounds", "picker")
 # {1} = current setting value (e.g. "on", "off")
