Refactored to new text API
Signed-off-by: Rafi Baum <rafi@ukbaums.com>

--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -20,6 +20,10 @@ setting.gamemode = Gamemode
 # {0} = gamemode name (e.g. "Creative" or "Spectator")
 setting.gamemode.lore = Current Gamemode: {0}
 
+setting.gamemode.creative = Creative Mode
+
+setting.gamemode.spectator = Spectator Mode
+
 # {0} = "/tools"
 setting.gamemode.warning = To toggle your gamemode back, use {0}
 
