Update table styling
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/dtc.mdx
+++ b/docs/modules/dtc.mdx
@@ -11,7 +11,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
       <tr>
         <th>Cores Element</th>
         <th>Description</th>
-        <th></th>
+        <th>Value/Children</th>
       </tr>
     </thead>
     <tbody>
@@ -25,7 +25,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
       <tr>
         <th>Sub-elements</th>
         <th />
-        <th>Value/Children</th>
+        <th />
       </tr>
       <tr>
         <td>
@@ -102,8 +102,8 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           >
             Property
           </span>
-          <span className="badge badge--danger">Required</span>A region
-          containing the core.
+          <span className="badge badge--danger">Required</span>A region containing
+          the core.
         </td>
         <td>
           <a href="/modules/regions">Bounded Region</a>
@@ -235,8 +235,8 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           >
             Property
           </span>
-          <span className="badge badge--danger">Required</span>A region
-          containing the core.
+          <span className="badge badge--danger">Required</span>A region containing
+          the core.
         </td>
         <td>
           <a href="/modules/regions">Bounded Regions</a>
