--- a/docs/modules/lootables.mdx
+++ b/docs/modules/lootables.mdx
@@ -12,7 +12,7 @@ They can optionally refill themselves on a schedule, or in response to dynamic f
       <tr>
         <th>Lootables Element</th>
         <th>Description</th>
-        <th />
+        <th>Value/Children</th>
       </tr>
     </thead>
     <tbody>
@@ -26,7 +26,7 @@ They can optionally refill themselves on a schedule, or in response to dynamic f
       <tr>
         <th>Sub-elements</th>
         <th />
-        <th>Value/Children</th>
+        <th />
       </tr>
       <tr>
         <td>
@@ -105,7 +105,7 @@ and operations for choosing them.
   <table>
     <thead>
       <tr>
-        <th>Loot Sub-elements</th>
+        <th style={{ minWidth: "200px" }}>Loot Sub-elements</th>
         <th>Description</th>
         <th>Type</th>
       </tr>
