--- a/docs/modules/scoring.mdx
+++ b/docs/modules/scoring.mdx
@@ -11,8 +11,8 @@ The score module can be used to give matches a score limit and modify how many p
       <tr>
         <th>Score Element</th>
         <th>Description</th>
-        <th />
-        <th />
+        <th>Value/Children</th>
+        <th>Default</th>
       </tr>
     </thead>
     <tbody>
@@ -25,8 +25,8 @@ The score module can be used to give matches a score limit and modify how many p
       <tr>
         <th>Sub-elements</th>
         <th />
-        <th>Value/Children</th>
-        <th>Default</th>
+        <th />
+        <th />
       </tr>
       <tr>
         <td>
@@ -360,7 +360,8 @@ Result can be the name of a team, or one of the special values; "tie" for no win
           <label>objectives</label> or a Team ID.
         </td>
         <td>
-          <span className="badge badge--primary">Victory Condition</span>|<span className="badge badge--primary">Team ID</span>
+          <span className="badge badge--primary">Victory Condition</span>|
+          <span className="badge badge--primary">Team ID</span>
         </td>
         <td>default</td>
       </tr>
